<resources>
    <string name="app_name">Tic-Tac-Toe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_display">All Time Wins</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Game Settings</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Player One</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="AiName">Rover</string>
    <string name="signin_other_error">Network error on Sign in.</string>

    <string name="app_id">389329484198</string>

    <string name="pref_display_name_one">Player One Name</string>
    <string name="pref_display_name_two">Player Two Name</string>
    <string name="pref_player_name_one_key">player_name_one_key</string>
    <string name="pref_player_name_two_key">player_name_two_key</string>
    <string name="pref_single_player_mode_key">single_player_mode_key</string>
    <string name="pref_title_single_mode">AI Mode</string>
    <string name="pref_description_single_mode">Disable if you want to deactivate single player mode. Enable for single player mode.</string>
    <string name="home_screen_play_offline">Let\'s Play!</string>
    <string name="home_screen_play_online">Play Online</string>
    <string name="pref_player_one_color_key">pref_player_one_color_key</string>
    <string name="pref_player_two_color_key">pref_player_two_color_key</string>
    <string name="title_activity_settings_test">Settings</string>
    <string name="pref_text_color_key">pref_text_color_key</string>
    <string name="pref_title_text_color">Change Color</string>


    <string-array name="pref_text_color">
        <item>Player One Color</item>
        <item>Player Two Color</item>
    </string-array>
    <string-array name="pref_difficulty">
        <item>Easy</item>
        <item>Intermediate</item>
        <item>Hard</item>
    </string-array>
    <string name="pref_difficulty_key">pref_difficulty_key</string>
    <string name="pref_title_difficulty">AI Difficulty</string>
    <string name="dialog_title_gameplay_ext">Exit Game</string>
    <string name="dialog_message_settings_exit">Do you really want to leave?</string>
    <string name="ad_mob_video_home_screen">ca-app-pub-9309556355508377/1777094640</string>
    <string name="ad_mob_video_multiplayer">ca-app-pub-9309556355508377/8626424082</string>
    <string name="video_test_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="default_difficulty">Hard</string>
</resources>
